WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304538
Unreviewed Playstation build fix after
304802@main
.
https://bugs.webkit.org/show_bug.cgi?id=304538
Summary
Unreviewed Playstation build fix after 304802@main.
Chris Dumez
Reported
2025-12-19 22:12:17 PST
Unreviewed Playstation build fix after
304802@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-19 22:12:29 PST
<
rdar://problem/166925130
>
Chris Dumez
Comment 2
2025-12-19 22:13:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55746
EWS
Comment 3
2025-12-19 23:16:01 PST
Committed
304811@main
(27be223f4b69): <
https://commits.webkit.org/304811@main
> Reviewed commits have been landed. Closing PR #55746 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug