Unreviewed Playstation build fix after 304802@main. https://bugs.webkit.org/show_bug.cgi?id=304538 rdar://166925130

* Source/WebCore/style/StyleBuilderCustom.h:
(WebCore::Style::BuilderCustom::determineMathDepthScale):

Canonical link: https://commits.webkit.org/304811@main